vlib/v/checker/tests/interface_method_name_err.vv
interface Foo {
	Fizz()
}

fn main() {
}
